Fix markdown formatting in spam_or_ham.ipynb

--- a/spam_or_ham.ipynb
+++ b/spam_or_ham.ipynb
@@ -35,7 +35,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 🧠 Naive Bayes para Filtragem de Spam\n",
+        "## Naive Bayes para Filtragem de Spam\n",
         "\n",
         "O algoritmo Naive Bayes é um classificador probabilístico baseado no Teorema de Bayes, que assume que as variáveis (no nosso caso, as palavras das mensagens) são independentes entre si.  \n",
         "Apesar dessa suposição ser simplificadora (“naive”), o método costuma ter ótimo desempenho em tarefas de classificação de texto, como a detecção de spam.\n",
@@ -54,7 +54,7 @@
         "\n",
         "---\n",
         "\n",
-        "### 🔧 Suavização Aditiva (Suavização de Laplace)\n",
+        "### Suavização Aditiva (Suavização de Laplace)\n",
         "\n",
         "Para evitar problemas com palavras que nunca apareceram em mensagens de spam ou não spam (o que faria a probabilidade ser zero), aplicamos a suavização aditiva de Laplace:\n",
         "\n",
@@ -2625,7 +2625,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "POdemos criar uma nova coluna no dataset de teste:"
+        "Podemos criar uma nova coluna no dataset de teste:"
       ],
       "metadata": {
         "id": "3zOvIlv1Xpix"
