Fix probability expression for Ham classification

--- a/spam_or_ham.ipynb
+++ b/spam_or_ham.ipynb
@@ -47,7 +47,7 @@
         "$$\n",
         "\n",
         "$$\n",
-        "P(Ham|w_1, w_2, \\dots, w_n) \\propto P(Spam^C) \\cdot \\prod_{i=1}^{n} P(w_i|Ham)\n",
+        "P(Ham|w_1, w_2, \\dots, w_n) \\propto P(Ham) \\cdot \\prod_{i=1}^{n} P(w_i|Ham)\n",
         "$$\n",
         "\n",
         "Essas expressões mostram que classificamos uma mensagem escolhendo a classe (Spam ou Não Spam) que maximiza essa probabilidade.\n",
